<?xml version="1.0"?>
<package>
  <name>knowrob_bank</name>
  <version>0.1.0</version>
  <description>
    Mesh creator tools for displaying the contents of the knowledge
    base.
  </description>

  <maintainer email="tanakit_21235@hotmail.com">Tanakitti Sachati</maintainer>

  <license>BSD</license>

  <author>Moritz Tenorth</author>
  <author email="danielb@cs.uni-bremen.de">Daniel Beßler</author>
  
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_messages</build_depend>

  <build_depend>knowrob_srdl</build_depend>
  <build_depend>knowrob_common</build_depend>
  <build_depend>data_vis_msgs</build_depend>

  <run_depend>knowrob_srdl</run_depend>
  <run_depend>knowrob_common</run_depend>
  <run_depend>data_vis_msgs</run_depend>

</package>
